# cowrie-log-analysis

./: .env.example  .gitignore  HUMAN_ANNOTATION_PLAN.md  IMPLEMENTATION_PLAN (1).md  Makefile  README.md  pyproject.toml
analysis/: pipelines.spec.example.json
config/: llm_costs.json
data/: README.md
docker/: docker-compose.yml
docs/: ANNOTATION_CODEBOOK.md  IMPLEMENTATION_PLAN.md  OPERATORS_GUIDE.md  error_recovery_debrief.md
scripts/: analyze_disagreements.py  analyze_patterns.py  compute_ground_truth_metrics.py  cost_benefit_analysis.py  extract_annotation_sample.py  index_to_elastic.py  local_llm_smoke.py  retry_errored_sessions.py  run_agent_pipeline.py  run_mvp_test.py  train_anomaly_detector.py  verify_session_schema.py
scripts/annotate/: README.md  index.html
src/: cost_report.json  disagreement_results.json
src/cowrie_dataset/: __init__.py  cli.py  config.py
src/cowrie_dataset/agents/: __init__.py  analyst.py  base.py  hunter.py  runner.py
src/cowrie_dataset/aggregators/: __init__.py  session_aggregator.py
src/cowrie_dataset/anomaly/: __init__.py  statistical_detector.py
src/cowrie_dataset/eval/: __init__.py  cli.py  ensemble.py  figures.py  headline.py  metrics.py  pairwise.py  taxonomy.py
src/cowrie_dataset/export/: __init__.py  session_exporter.py
src/cowrie_dataset/features/: __init__.py  geo_features.py  host_features.py  message_features.py
src/cowrie_dataset/labeling/: __init__.py  mitre_labeler.py
src/cowrie_dataset/llm/: __init__.py  clients.py
tests/: __init__.py  test_metrics.py  test_phases.py
(+9 files in other folders)
